# wattbar

./: .gitignore  CONTRIBUTERS.md  COPYING  Cargo.nix  Cargo.toml  README.adoc  README.md  default.theme  flake.nix  shell.nix  wattbar.spec
maintainer/: gen_colorspaces.py
src/: colorspace.rs  colorspace.rs.gen  main.rs  theme.rs  upower.rs
