[package]
name = "wattbar"
authors = [ "TQ Hirsch <thequux@thequux.com>" ]
description = "Simple battery status display"
homepage = "https://github.com/thequux/wattbar"
repository = "https://github.com/thequux/wattbar"

license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = "0.29"
wayland-protocols = "0.29"
anyhow = "1"
smithay-client-toolkit = { version = "0.15", default-features = false, features = ["calloop"] }
calloop = "0.9.3"
zbus = "3.7"
upower_dbus = "0.3.0"

palette = "0.6.0"
