[package]
name = "wattbar"
authors = [ "TQ Hirsch <thequux@thequux.com>" ]
description = "Simple battery status display"
homepage = "https://github.com/thequux/wattbar"
repository = "https://github.com/thequux/wattbar"

license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = "0.31.2"
wayland-protocols = { features = ["client"], version = "0.31.2" }
anyhow = "1"
smithay-client-toolkit = { version = "0.18.1", default-features = false, features = ["calloop"] }
calloop = "0.12.0"
zbus = "3.7"
upower_dbus = "0.3.0"

palette = "0.7.0"
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
clap = { version = "4.5.4", features = ["derive", "cargo"] }
cssparser-color = "0.1.0"
cssparser = "0.33"
xdg = "2.5.2"
once_cell = "1.19.0"
lazy-regex = "3.1.0"
thiserror = "1.0.59"
